--- a/Generator~/Tests/ReactiveBinding.Generator.Tests.csproj
+++ b/Generator~/Tests/ReactiveBinding.Generator.Tests.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Core\ReactiveBinding.Generator.csproj" />
     <Compile Include="..\..\Runtime\*.cs" Link="Attributes\%(Filename)%(Extension)" />
+    <Compile Include="..\..\Runtime\Collections\*.cs" Link="Collections\%(Filename)%(Extension)" />
   </ItemGroup>
 
 </Project>
